--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   "require": {
     "php": ">=5.4.10",
     "symfony/framework-bundle": ">=2.1,<3.0",
-    "symfony/yaml": ">=2.1,<3.0"
+    "symfony/yaml": ">=2.1,<3.0",
+    "elastification/php-client": "dev-master"
   },
   "require-dev": {
     "munkie/elasticsearch-thrift-php": "~1.4",
