--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "elastification/php-client": "<1.0"
   },
   "require-dev": {
+    "phpunit/phpunit": "~4.1",
     "munkie/elasticsearch-thrift-php": "~1.4",
     "guzzlehttp/guzzle": "~4.2",
     "jms/serializer": "~0.15"
