--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,6 +25,8 @@
                 <directory>./Resources</directory>
                 <directory>./Tests</directory>
                 <directory>./vendor</directory>
+                <directory>./DependencyInjection</directory>
+                <directory>./ElastificationPhpClientBundle.php</directory>
             </exclude>
         </whitelist>
     </filter>
