removed ocular from travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,4 @@ php:
   - 5.6
   - hhvm
 
-script: vendor/bin/phpunit --coverage-clover=coverage.clover
-
-after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+script: vendor/bin/phpunit
