--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     "php": ">=5.4.10",
     "symfony/framework-bundle": ">=2.1,<3.0",
     "symfony/yaml": ">=2.1,<3.0",
-    "elastification/php-client": "<1.0"
+    "elastification/php-client": ">=0.9,<1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.1",
     "munkie/elasticsearch-thrift-php": "~1.4",
-    "guzzlehttp/guzzle": "~4.2",
+    "guzzlehttp/guzzle": ">=6.0,<=7.0",
     "jms/serializer": "~0.15"
   },
   "autoload": {
