--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
   ],
   "require": {
     "php": ">=5.5.0",
-    "symfony/framework-bundle": ">=2.1,<3.0",
-    "symfony/yaml": ">=2.1,<3.0",
+    "symfony/framework-bundle": "~2.3|~3.0",
+    "symfony/yaml": "~2.3|~3.0",
     "elastification/php-client": ">=0.9,<1.0"
   },
   "require-dev": {
